# CMakeList.txt : CMake project for Chapter4, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Chapter4 "Chapter4.cpp" "Chapter4.h" "median.cpp" "median.h" "Student_info.cpp" "Student_info.h" "grade.cpp" "grade.h" "ch4_2.cpp" "ch4_2.h" "ch4_0.h")

# TODO: Add tests and install targets if needed.
