# CMakeList.txt : CMake project for Chapter3, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Chapter3 "Chapter3.cpp" "Chapter3.h" "ch3_0.cpp" "ch3_0.h")

# TODO: Add tests and install targets if needed.
