# CMakeList.txt : CMake project for Chapter6, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Chapter6 "Chapter6.cpp" "Chapter6.h" "ch5_2.cpp" "ch5_2.h" "read.cpp" "read.h" "median.cpp" "median.h" "grade.cpp" "grade.h" "ch6_0.cpp" "ch6_0.h" "average.h" "average.cpp" "analysis.cpp" "analysis.h")

# TODO: Add tests and install targets if needed.
