# CMakeList.txt : CMake project for Chapter8, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Chapter8 "Chapter8.cpp" "Chapter8.h"  "median.h" "split.h" "split.cpp"  "analysis.cpp" "analysis.h" "average.cpp" "average.h" "grade.cpp" "grade.h" "read.cpp" "read.h" "ch8_1.cpp" "ch8_1.h" "ch8_0.cpp" "ch8_0.h")

# TODO: Add tests and install targets if needed.
