# CMakeList.txt : CMake project for Chapter5, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Chapter5       "Chapter5.cpp" "Chapter5.h"     "ch5_0.cpp"  "ch5_0.h" "median.cpp" "median.h" "grade.cpp" "grade.h" "read.cpp" "read.h" "ch5_2.cpp" "ch5_2.h" "timer.cpp" "ch5_5.h" "ch5_5.cpp")

# TODO: Add tests and install targets if needed.
