# CMakeList.txt : CMake project for Chapter7, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Chapter7 "Chapter7.cpp" "Chapter7.h" "ch7_0.cpp" "ch7_0.h" "ch7_0b.cpp" "ch7_0b.h" "split.cpp" "split.h")

# TODO: Add tests and install targets if needed.
